--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -619,11 +619,7 @@
 
 
 
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
-</style>
-
-<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+ <div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
         <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
@@ -632,7 +628,7 @@
     </div>
 </div>
 
-<div class="legal-pad-wrapper" style="max-width: 900px; margin: 0 auto 100px; position: relative; font-family: 'Courier New', Courier, monospace; padding: 0 15px; box-sizing: border-box;">
+<div class="legal-pad-wrapper" style="max-width: 900px; margin: 0 auto 100px; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0 15px; box-sizing: border-box;">
     <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b;">
         <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px;">
             <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%;"></div>
@@ -646,8 +642,8 @@
         <div style="position: absolute; left: 65px; top: 0; bottom: 0; width: 2px; border-left: 1px solid #ff8a80; border-right: 1px solid #ff8a80; pointer-events: none;"></div>
 
         <div style="margin-bottom: 45px; position: relative;">
-            <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; font-family: 'Segoe UI', sans-serif;">Date: Feb 05, 2026</span>
-            <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; font-family: 'Segoe UI', sans-serif; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block;">
+            <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase;">Date: Feb 05, 2026</span>
+            <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block;">
                 Performance Analysis & Training Plan
             </h3>
         </div>
@@ -655,10 +651,10 @@
         <div class="memo-body" style="display: flex; flex-direction: column; gap: 28px; max-width: 100%; position: relative; z-index: 1; margin-bottom: 50px;">
             
             <div style="display: flex; gap: 15px; align-items: flex-start;">
-                <span style="font-size: 20px; color: #0c2340; font-weight: 900; font-family: 'Segoe UI', sans-serif;">01.</span>
+                <span style="font-size: 20px; color: #0c2340; font-weight: 900;">01.</span>
                 <div>
-                    <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; font-family: 'Segoe UI', sans-serif; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px;">R3 Technical Feedback</h4>
-                    <p style="margin: 8px 0 0 0; font-size: 17px; color: #2c3e50; line-height: 28px; font-weight: 600; font-family: 'Shadows Into Light', cursive; letter-spacing: 0.5px;">
+                    <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px;">R3 Technical Feedback</h4>
+                    <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500;">
                         <strong>Status:</strong> Increased yardage applied under narrow fairway/high-wind conditions. Driver and long-iron dispersion data recorded for technical adjustment and subsequent training. <br>
                         <strong>Focus:</strong> Maintaining consistent short-game execution (wedge/putting) while prioritizing dispersion recalibration.
                     </p>
@@ -666,17 +662,17 @@
             </div>
 
             <div style="display: flex; gap: 15px; align-items: flex-start;">
-                <span style="font-size: 20px; color: #0c2340; font-weight: 900; font-family: 'Segoe UI', sans-serif;">02.</span>
+                <span style="font-size: 20px; color: #0c2340; font-weight: 900;">02.</span>
                 <div>
-                    <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; font-family: 'Segoe UI', sans-serif; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px;">Corrective Training</h4>
-                    <p style="margin: 8px 0 0 0; font-size: 17px; color: #2c3e50; line-height: 28px; font-weight: 600; font-family: 'Shadows Into Light', cursive; letter-spacing: 0.5px;">
+                    <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px;">Corrective Training</h4>
+                    <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500;">
                         <strong>Feb 4:</strong> Technical training session conducted to address driver dispersion and long-iron control in preparation for the home tournament (Feb 23–24). Academic scheduling adjustments finalized to maintain balance with upcoming competition commitments.
                     </p>
                 </div>
             </div>
         </div>
 
-        <div style="background: #ffffff; padding: 25px; border-radius: 15px; border: 1px solid #d4cf92; box-shadow: 0 10px 20px rgba(0,0,0,0.05); font-family: 'Segoe UI', sans-serif; width: calc(100% + 20px); margin-left: -10px; box-sizing: border-box; z-index: 2; position: relative;">
+        <div style="background: #ffffff; padding: 25px; border-radius: 15px; border: 1px solid #d4cf92; box-shadow: 0 10px 20px rgba(0,0,0,0.05); width: calc(100% + 20px); margin-left: -10px; box-sizing: border-box; z-index: 2; position: relative;">
             <div style="position: absolute; top: -25px; left: 50%; transform: translateX(-50%) rotate(15deg); width: 30px; height: 50px; z-index: 3; pointer-events: none;">
                 <div style="position: absolute; top: 20px; left: 14px; width: 2px; height: 25px; background: linear-gradient(to right, #94a3b8, #f1f5f9, #64748b); box-shadow: 1px 1px 2px rgba(0,0,0,0.2);"></div>
                 <div style="position: absolute; top: 0; left: 3px; width: 24px; height: 24px; background: #d32f2f; border-radius: 50%; box-shadow: 2px 4px 6px rgba(0,0,0,0.3);">
@@ -689,18 +685,18 @@
                 <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase;">Spring Opener Technical Memo</span>
             </div>
             <div style="display: flex; flex-wrap: wrap; gap: 20px;">
-                <p style="margin: 0; font-size: 17px; color: #0c2340; font-weight: 700; line-height: 1.4; flex: 1; min-width: 240px; font-family: 'Shadows Into Light', cursive;">
+                <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px;">
                     • Target: Home-Field Team Title<br>
                     • Drills: Dispersion Control (w/ Bryan)
                 </p>
-                <p style="margin: 0; font-size: 17px; color: #0c2340; font-weight: 700; line-height: 1.4; flex: 1; min-width: 240px; font-family: 'Shadows Into Light', cursive;">
+                <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px;">
                     • Academic: Coursework management<br>
                     • Status: Training Schedule Optimized
                 </p>
             </div>
         </div>
 
-        <div style="margin-top: 30px; padding-left: 10px; font-size: 10px; color: #cbd5e1; font-weight: 800; text-transform: uppercase; font-family: 'Segoe UI', sans-serif; letter-spacing: 1px;">
+        <div style="margin-top: 30px; padding-left: 10px; font-size: 10px; color: #cbd5e1; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">
             Joshua's Memo Note
         </div>
     </div>
