--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -804,7 +804,7 @@
     <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
     <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
       Rank Impact: <span style="color: #e11d48;">▲</span> 136 | SG: 0.35 | Weighted Pts: 54.06<br>
-      WAGR Pwr: TBD / Pts: TBD
+      WAGR Pwr: 125.1005 / Pts: 6.3425
     </div>
     <div class="mobile-status-bar">
       <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value" style="font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
