--- a/test-1.html
+++ b/test-1.html
@@ -221,43 +221,45 @@
 
 
 
+그래프 시작
+
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <div style="width: 100%; max-width: 950px; margin: 20px auto; padding: 30px; background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; font-family: 'Oswald', sans-serif; box-shadow: 0 4px 20px rgba(0,0,0,0.05);">
   <h2 style="font-size: 1.6em; color: #0c2340; margin-bottom: 5px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Performance Data Analysis</h2>
   <p style="font-size: 0.9em; color: #888; margin-bottom: 35px; font-family: 'Montserrat', sans-serif;">Official Tournament & Internal Qualifier Verified Records.</p>
   
-  <div style="margin-bottom: 60px;">
+  <div style="margin-bottom: 60px; position: relative;">
     <div style="display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 15px; border-bottom: 2px solid #F15A22; padding-bottom: 8px;">
       <h3 style="font-size: 1.2em; color: #0c2340; margin: 0; font-weight: 500; text-transform: uppercase;">Official Tournament Rounds</h3>
       <span style="font-size: 0.8em; color: #F15A22; font-weight: 400;">* WAGR Verified Performance</span>
     </div>
-    <div style="position: relative; height: 400px; background: linear-gradient(to bottom, #fcfcfc, #ffffff);">
+    <div style="position: relative; height: 420px; background: linear-gradient(to bottom, #fcfcfc, #ffffff); border-radius: 8px; padding-top: 20px;">
       <canvas id="officialTournamentChart"></canvas>
     </div>
   </div>
 
-  <div>
+  <div style="position: relative;">
     <div style="display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 15px; border-bottom: 2px solid #806600; padding-bottom: 8px;">
       <h3 style="font-size: 1.2em; color: #0c2340; margin: 0; font-weight: 500; text-transform: uppercase;">Internal Qualifier Rounds</h3>
       <span style="font-size: 0.8em; color: #806600; font-weight: 400;">TPC San Antonio (Canyons / Oaks)</span>
     </div>
-    <div style="position: relative; height: 400px; background: linear-gradient(to bottom, #fcfcfc, #ffffff);">
+    <div style="position: relative; height: 400px; background: linear-gradient(to bottom, #fcfcfc, #ffffff); border-radius: 8px;">
       <canvas id="internalQualifierChart"></canvas>
     </div>
   </div>
 </div>
 
 <script>
-// Chart.js 전역 설정: 폰트 일관성 유지
 Chart.defaults.font.family = "'Oswald', sans-serif";
 Chart.defaults.color = '#555';
 
 // 1. Official Tournament Chart
 const ctxOfficial = document.getElementById('officialTournamentChart').getContext('2d');
 const gradientOfficial = ctxOfficial.createLinearGradient(0, 0, 0, 400);
-gradientOfficial.addColorStop(0, 'rgba(241, 90, 34, 0.15)');
-gradientOfficial.addColorStop(1, 'rgba(241, 90, 34, 0.01)');
+gradientOfficial.addColorStop(0, 'rgba(241, 90, 34, 0.12)');
+gradientOfficial.addColorStop(1, 'rgba(241, 90, 34, 0.00)');
 
 new Chart(ctxOfficial, {
   type: 'line',
@@ -281,14 +283,18 @@ new Chart(ctxOfficial, {
   options: {
     responsive: true,
     maintainAspectRatio: false,
+    interaction: {
+      mode: 'index',
+      intersect: false, // 마우스를 근처에만 가져가도 툴팁 활성화
+    },
     scales: {
       y: {
         reverse: false,
         min: 68,
-        max: 76,
-        grid: { color: '#f0f0f0', drawBorder: false },
+        max: 78, // 툴팁 공간 확보를 위해 상단 여백 상향 조정
+        grid: { color: '#f5f5f5', drawBorder: false },
         ticks: { font: { size: 12, weight: '500' }, callback: (val) => val + ' STK' },
-        title: { display: true, text: 'STROKES PER ROUND', color: '#999', font: { size: 10, weight: '500' } }
+        title: { display: true, text: 'STROKES PER ROUND', color: '#bbb', font: { size: 10 } }
       },
       x: {
         grid: { display: false },
@@ -298,11 +304,14 @@ new Chart(ctxOfficial, {
     plugins: {
       legend: { display: false },
       tooltip: {
-        backgroundColor: 'rgba(12, 35, 64, 0.9)',
+        enabled: true,
+        position: 'average', // 데이터 포인트 근처에 위치하되 
+        yAlign: 'bottom',    // 툴팁 박스가 포인트 '위쪽'으로 나타나도록 고정 (오른쪽 가림 방지)
+        backgroundColor: 'rgba(12, 35, 64, 0.95)',
         titleFont: { size: 14, family: "'Oswald'" },
-        bodyFont: { family: "'Montserrat'" },
-        padding: 12,
-        cornerRadius: 4,
+        bodyFont: { family: "'Montserrat'", size: 12 },
+        padding: 15,
+        cornerRadius: 6,
         displayColors: false,
         callbacks: {
           afterLabel: function(context) {
@@ -332,59 +341,32 @@ const ctxInternal = document.getElementById('internalQualifierChart').getContext
 new Chart(ctxInternal, {
   type: 'line',
   data: {
-    labels: [
-      'Aug 27 (Can)', 'Aug 28 (Can)', 'Sep 01 (Can)', 'Sep 01 (Oaks)', 'Sep 02 (Oaks)', 
-      'Sep 26 (Can)', 'Sep 30 (Oaks)', 'Oct 02 (Oaks)', 'Jan 22 (Can)', 'Jan 23 (Oaks)', 'Jan 26 (Oaks)'
-    ],
+    labels: ['Aug 27 (Can)', 'Aug 28 (Can)', 'Sep 01 (Can)', 'Sep 01 (Oaks)', 'Sep 02 (Oaks)', 'Sep 26 (Can)', 'Sep 30 (Oaks)', 'Oct 02 (Oaks)', 'Jan 22 (Can)', 'Jan 23 (Oaks)', 'Jan 26 (Oaks)'],
     datasets: [
-      {
-        label: 'TPC SA - CANYONS',
-        data: [69, 68, 69, null, null, 73, null, null, 68, null, null],
-        borderColor: '#806600',
-        backgroundColor: 'transparent',
-        borderWidth: 2,
-        pointRadius: 5,
-        pointBackgroundColor: '#806600',
-        spanGaps: true,
-        tension: 0.1
-      },
-      {
-        label: 'TPC SA - OAKS',
-        data: [null, null, null, 81, 74, null, 69, 74, null, 69, 76],
-        borderColor: '#0c2340',
-        backgroundColor: 'transparent',
-        borderWidth: 2,
-        pointRadius: 5,
-        pointBackgroundColor: '#0c2340',
-        spanGaps: true,
-        tension: 0.1
-      }
+      { label: 'TPC SA - CANYONS', data: [69, 68, 69, null, null, 73, null, null, 68, null, null], borderColor: '#806600', backgroundColor: 'transparent', borderWidth: 2, pointRadius: 5, pointBackgroundColor: '#806600', spanGaps: true, tension: 0.1 },
+      { label: 'TPC SA - OAKS', data: [null, null, null, 81, 74, null, 69, 74, null, 69, 76], borderColor: '#0c2340', backgroundColor: 'transparent', borderWidth: 2, pointRadius: 5, pointBackgroundColor: '#0c2340', spanGaps: true, tension: 0.1 }
     ]
   },
   options: {
     responsive: true,
     maintainAspectRatio: false,
+    interaction: { mode: 'index', intersect: false },
     scales: {
-      y: {
-        min: 65,
-        max: 85,
-        grid: { color: '#f0f0f0' },
-        ticks: { font: { size: 11 }, callback: (val) => val + ' STK' }
-      },
-      x: {
-        grid: { display: false },
-        ticks: { font: { size: 10 }, maxRotation: 45, minRotation: 45 }
-      }
+      y: { min: 65, max: 85, grid: { color: '#f5f5f5' }, ticks: { font: { size: 11 }, callback: (val) => val + ' STK' } },
+      x: { grid: { display: false }, ticks: { font: { size: 10 }, maxRotation: 45, minRotation: 45 } }
     },
     plugins: {
-      legend: {
-        position: 'bottom',
-        labels: { boxWidth: 12, font: { size: 12, weight: '500' }, padding: 20 }
+      legend: { position: 'bottom', labels: { boxWidth: 12, font: { size: 12, weight: '500' }, padding: 20 } },
+      tooltip: {
+        yAlign: 'bottom', // 여기서도 툴팁을 포인트 위로 띄워 가독성 확보
+        backgroundColor: 'rgba(0, 0, 0, 0.8)',
+        padding: 10
       }
     }
   }
 });
 </script>
+
 
 
 
