--- a/test-1.html
+++ b/test-1.html
@@ -225,6 +225,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 
 <div style="width: 100%; max-width: 950px; margin: 20px auto; padding: 30px; background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; font-family: 'Oswald', sans-serif; box-shadow: 0 4px 20px rgba(0,0,0,0.05);">
   <h2 style="display: inline-block; background: #F15A22; color: #ffffff; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Performance Data Analysis</h2>
@@ -233,7 +234,7 @@
   <div style="margin-bottom: 60px; position: relative;">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #F15A22; padding-bottom: 8px;">
       <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500; text-transform: uppercase;">Official Tournament Rounds</h3>
-      <span style="background: #0c2340; color: #fff; padding: 2px 8px; font-size: 0.75em; border-radius: 3px; font-weight: 400;">OFFICIAL TOURNAMENT RESULTS</span>
+      <span style="background: #0c2340; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500; letter-spacing: 0.5px;">FRESHMAN SEASON</span>
     </div>
     <div style="position: relative; height: 400px; background: #fafafa; border-radius: 8px; padding: 15px;">
       <canvas id="officialTournamentChart"></canvas>
@@ -243,7 +244,7 @@
   <div style="position: relative;">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #806600; padding-bottom: 8px;">
       <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500; text-transform: uppercase;">Internal Qualifier Rounds</h3>
-      <span style="background: #806600; color: #fff; padding: 2px 8px; font-size: 0.75em; border-radius: 3px; font-weight: 400;">TPC SAN ANTONIO</span>
+      <span style="background: #806600; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500; letter-spacing: 0.5px;">TPC SAN ANTONIO</span>
     </div>
     <div style="position: relative; height: 400px; background: #fafafa; border-radius: 8px; padding: 15px;">
       <canvas id="internalQualifierChart"></canvas>
@@ -252,6 +253,8 @@
 </div>
 
 <script>
+// 플러그인 등록
+Chart.register(ChartDataLabels);
 Chart.defaults.font.family = "'Oswald', sans-serif";
 
 // 1. Official Tournament Chart
@@ -272,28 +275,37 @@ new Chart(ctxOfficial, {
       pointBorderColor: '#fff',
       pointBorderWidth: 2,
       tension: 0.2,
-      fill: true
+      fill: true,
+      // 데이터 레이블 설정 (상위 성적 표시)
+      datalabels: {
+        align: 'top',
+        anchor: 'end',
+        offset: 8,
+        color: (context) => context.dataIndex === 5 ? '#0c2340' : '#F15A22',
+        font: { weight: '700', size: 12 },
+        formatter: function(value, context) {
+          const ranks = ['T9', '', '', '', '', 'T3']; // 표시하고 싶은 성적만 입력
+          return ranks[context.dataIndex];
+        }
+      }
     }]
   },
   options: {
     responsive: true,
     maintainAspectRatio: false,
+    layout: { padding: { top: 30 } }, // 레이블이 잘리지 않도록 여백 추가
     interaction: { mode: 'index', intersect: false },
     scales: {
       y: {
-        min: 68,
-        max: 78,
+        min: 65,
+        max: 78, // 레이블 표시를 위해 상단 공간 확보
         grid: { color: '#e5e5e5', drawBorder: false },
-        ticks: { 
-          font: { size: 11, weight: '600' },
-          color: '#F15A22',
-          callback: (val) => val + ' STK'
-        },
-        title: { display: true, text: 'AVG. STROKES', color: '#999', font: { size: 9, weight: '500' } }
+        ticks: { font: { size: 12, weight: '600' }, color: '#333', padding: 10 },
+        title: { display: true, text: 'AVG. STROKES', color: '#333', font: { size: 12, weight: '700' } }
       },
       x: {
         grid: { display: false },
-        ticks: { color: '#333', font: { size: 10, weight: '400' }, maxRotation: 0, minRotation: 0 }
+        ticks: { color: '#333', font: { size: 10, weight: '400' } }
       }
     },
     plugins: {
@@ -301,8 +313,8 @@ new Chart(ctxOfficial, {
       tooltip: {
         enabled: true,
         yAlign: 'bottom',
-        backgroundColor: '#0c2340', // UTSA Midnight Blue
-        titleColor: '#F15A22',      // UTSA Orange 포인트
+        backgroundColor: '#0c2340',
+        titleColor: '#F15A22',
         titleFont: { size: 13, weight: '600' },
         bodyColor: '#ffffff',
         bodyFont: { family: "'Montserrat'", size: 11 },
@@ -327,6 +339,9 @@ new Chart(ctxOfficial, {
             ].filter(v => v !== null);
           }
         }
+      },
+      datalabels: {
+        display: true // 전역 레이블 활성화
       }
     }
   }
@@ -339,20 +354,44 @@ new Chart(ctxInternal, {
   data: {
     labels: ['8/27', '8/28', '9/01', '9/01', '9/02', '9/26', '9/30', '10/02', '1/22', '1/23', '1/26'],
     datasets: [
-      { label: 'Canyons', data: [69, 68, 69, null, null, 73, null, null, 68, null, null], borderColor: '#806600', backgroundColor: 'transparent', borderWidth: 2, pointRadius: 4, spanGaps: true },
-      { label: 'Oaks', data: [null, null, null, 81, 74, null, 69, 74, null, 69, 76], borderColor: '#0c2340', backgroundColor: 'transparent', borderWidth: 2, pointRadius: 4, spanGaps: true }
+      { 
+        label: 'Canyons', 
+        data: [69, 68, 69, null, null, 73, null, null, 68, null, null], 
+        borderColor: '#806600', 
+        backgroundColor: 'transparent', 
+        borderWidth: 2, 
+        pointRadius: 4, 
+        spanGaps: true,
+        datalabels: { display: false } // 내부 퀄리파이어는 레이블 제외 (깔끔하게)
+      },
+      { 
+        label: 'Oaks', 
+        data: [null, null, null, 81, 74, null, 69, 74, null, 69, 76], 
+        borderColor: '#0c2340', 
+        backgroundColor: 'transparent', 
+        borderWidth: 2, 
+        pointRadius: 4, 
+        spanGaps: true,
+        datalabels: { display: false }
+      }
     ]
   },
   options: {
     responsive: true,
     maintainAspectRatio: false,
     scales: {
-      y: { min: 65, max: 85, grid: { color: '#e5e5e5' }, ticks: { font: { size: 10 }, color: '#806600', callback: (val) => val + ' STK' } },
-      x: { grid: { display: false }, ticks: { font: { size: 9 } } }
+      y: { 
+        min: 65, max: 85, 
+        grid: { color: '#e5e5e5' }, 
+        ticks: { font: { size: 11, weight: '600' }, color: '#333' },
+        title: { display: true, text: 'STROKES', color: '#333', font: { size: 11, weight: '700' } }
+      },
+      x: { grid: { display: false }, ticks: { font: { size: 9 }, color: '#333' } }
     },
     plugins: {
       legend: { position: 'bottom', labels: { boxWidth: 10, font: { size: 11 } } },
-      tooltip: { yAlign: 'bottom', backgroundColor: '#0c2340' }
+      tooltip: { yAlign: 'bottom', backgroundColor: '#0c2340' },
+      datalabels: { display: false }
     }
   }
 });
