--- a/test-1.html
+++ b/test-1.html
@@ -227,7 +227,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 
-<div style="width: 100%; max-width: 950px; margin: 20px auto; padding: 30px; background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; font-family: 'Oswald', sans-serif; box-shadow: 0 4px 20px rgba(0,0,0,0.05);">
+<div style="width: 100%; max-width: 950px; margin: 80px auto 20px auto; padding: 30px; background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; font-family: 'Oswald', sans-serif; box-shadow: 0 4px 20px rgba(0,0,0,0.05);">
   <h2 style="display: inline-block; background: #F15A22; color: #ffffff; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Performance Data Analysis</h2>
   <p style="font-size: 0.85em; color: #888; margin-bottom: 35px; font-family: 'Montserrat', sans-serif; padding-left: 5px;">Tournament & Internal Qualifier Verified Records.</p>
   
@@ -236,7 +236,7 @@
       <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500; text-transform: uppercase;">Official Tournament Rounds</h3>
       <span style="background: #0c2340; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500; letter-spacing: 0.5px;">FRESHMAN SEASON</span>
     </div>
-    <div style="position: relative; height: 400px; background: #fafafa; border-radius: 8px; padding: 15px;">
+    <div style="position: relative; height: 420px; background: #fafafa; border-radius: 8px; padding: 25px 15px 15px 15px;">
       <canvas id="officialTournamentChart"></canvas>
     </div>
   </div>
@@ -269,22 +269,34 @@ new Chart(ctxOfficial, {
       borderColor: '#F15A22',
       backgroundColor: 'rgba(241, 90, 34, 0.05)',
       borderWidth: 2.5,
-      pointRadius: [8, 5, 5, 5, 5, 10],
-      pointHoverRadius: [10, 7, 7, 7, 7, 12],
-      pointBackgroundColor: ['#0c2340', '#F15A22', '#F15A22', '#F15A22', '#F15A22', '#0c2340'],
+      pointRadius: [10, 6, 6, 6, 6, 12],
+      pointHoverRadius: [12, 8, 8, 8, 8, 14],
+      pointBackgroundColor: (context) => {
+        const i = context.dataIndex;
+        return (i === 0 || i === 5) ? '#F15A22' : '#0c2340';
+      },
       pointBorderColor: '#fff',
       pointBorderWidth: 2,
       tension: 0.2,
       fill: true,
-      // 데이터 레이블 설정 (상위 성적 표시)
       datalabels: {
         align: 'top',
         anchor: 'end',
         offset: 8,
-        color: (context) => context.dataIndex === 5 ? '#0c2340' : '#F15A22',
-        font: { weight: '700', size: 12 },
+        padding: 6,
+        // 상위 성적은 오렌지색 원형 배경, 나머지는 텍스트만
+        backgroundColor: (context) => {
+          const i = context.dataIndex;
+          return (i === 0 || i === 5) ? '#F15A22' : 'transparent';
+        },
+        borderRadius: 15, // 둥근 서클 효과
+        color: (context) => {
+          const i = context.dataIndex;
+          return (i === 0 || i === 5) ? '#ffffff' : '#0c2340';
+        },
+        font: { weight: '700', size: 11 },
         formatter: function(value, context) {
-          const ranks = ['T9', '', '', '', '', 'T3']; // 표시하고 싶은 성적만 입력
+          const ranks = ['T9', 'T12', 'T24', 'T55', 'T38', 'T3'];
           return ranks[context.dataIndex];
         }
       }
@@ -293,12 +305,12 @@ new Chart(ctxOfficial, {
   options: {
     responsive: true,
     maintainAspectRatio: false,
-    layout: { padding: { top: 30 } }, // 레이블이 잘리지 않도록 여백 추가
+    layout: { padding: { top: 40 } }, // 레이블 공간 확보
     interaction: { mode: 'index', intersect: false },
     scales: {
       y: {
         min: 65,
-        max: 78, // 레이블 표시를 위해 상단 공간 확보
+        max: 80, // 상단 레이블 가림 방지를 위해 더 여유 있게 설정
         grid: { color: '#e5e5e5', drawBorder: false },
         ticks: { font: { size: 12, weight: '600' }, color: '#333', padding: 10 },
         title: { display: true, text: 'AVG. STROKES', color: '#333', font: { size: 12, weight: '700' } }
@@ -340,40 +352,20 @@ new Chart(ctxOfficial, {
           }
         }
       },
-      datalabels: {
-        display: true // 전역 레이블 활성화
-      }
+      datalabels: { display: true }
     }
   }
 });
 
-// 2. Internal Qualifier Chart
+// 2. Internal Qualifier Chart (디자인 통일성 유지)
 const ctxInternal = document.getElementById('internalQualifierChart').getContext('2d');
 new Chart(ctxInternal, {
   type: 'line',
   data: {
     labels: ['8/27', '8/28', '9/01', '9/01', '9/02', '9/26', '9/30', '10/02', '1/22', '1/23', '1/26'],
     datasets: [
-      { 
-        label: 'Canyons', 
-        data: [69, 68, 69, null, null, 73, null, null, 68, null, null], 
-        borderColor: '#806600', 
-        backgroundColor: 'transparent', 
-        borderWidth: 2, 
-        pointRadius: 4, 
-        spanGaps: true,
-        datalabels: { display: false } // 내부 퀄리파이어는 레이블 제외 (깔끔하게)
-      },
-      { 
-        label: 'Oaks', 
-        data: [null, null, null, 81, 74, null, 69, 74, null, 69, 76], 
-        borderColor: '#0c2340', 
-        backgroundColor: 'transparent', 
-        borderWidth: 2, 
-        pointRadius: 4, 
-        spanGaps: true,
-        datalabels: { display: false }
-      }
+      { label: 'Canyons', data: [69, 68, 69, null, null, 73, null, null, 68, null, null], borderColor: '#806600', backgroundColor: 'transparent', borderWidth: 2, pointRadius: 4, spanGaps: true },
+      { label: 'Oaks', data: [null, null, null, 81, 74, null, 69, 74, null, 69, 76], borderColor: '#0c2340', backgroundColor: 'transparent', borderWidth: 2, pointRadius: 4, spanGaps: true }
     ]
   },
   options: {
